customize/platform/ext/hac/web/webroot/static/css/style.css
/* ... */
#innerContent input[type='text'] { /*-webkit-transition: -webkit-transform 0.75s ease-out;
	-webkit-transform: translate(0, 150px);
	-moz-transition: -moz-transform 0.75s ease-out;
	-moz-transform: translate(0, 150px);*/
	background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#FFFFFF), to(#D4D4D4) );
	font-family: Helvetica, Arial, sans-serif;
	border-radius: 3px;
	border: 1px solid #ddd;
	padding: 5px 8px 4px 8px;
	font-size: 1.7em;
	min-width: 312px;
	color: #666;
	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
}

#innerContent input[type='text']:focus {
	-webkit-transform: translate(0, 0);
	-moz-transform: translate(0, 0);
}

#result tr, .pointer {
	cursor: pointer;
}

#result tr td {
	-webkit-transition: background 0.25s ease-out;
	-moz-transition: background 0.25s ease-out;
	background-color: #fff;
	border-left: 1px solid #eee;
	border-top: 1px solid #eee;
	border-radius: 2px 2px 2px 2px;
	padding: 4px;
}

.searchresults {
	border-radius: 3px;
	box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
}

#result tr:hover td {
	background-color: #326CA6;
	color: #fff;
}

@
-webkit-keyframes pulse { 0% {
		-webkit-box-shadow: 0 0 12px rgba(153, 204, 51, 0.2);
	} 50% {
		-webkit-box-shadow: 0 0 12px rgba(153, 204, 51, 1);
	} 100% {
		-webkit-box-shadow: 0 0 12px rgba(153, 204, 51, 0.2);
	}
}

#props {
	float: left;
}

#props input[type="text"]:focus {
	-webkit-animation: pulse 1.5s infinite ease-in-out;
	-moz-animation: pulse 1.5s infinite ease-in-out;
}

.removeIcon {
	-webkit-transition: opacity 0.75s ease-out;
	-moz-transition: opacity 0.75s ease-out;
	width: 20px;
	height: 20px;
	float: right;
	opacity: 0.25;
	float: left;
	margin-top: 8px;
}

.removeIcon:hover {
	cursor: pointer;
	opacity: 1;
}

.applyIcon {
	-webkit-transition: opacity 0.75s ease-out;
	-moz-transition: opacity 0.75s ease-out;
	width: 20px;
	height: 20px;
	float: right;
	opacity: 0.25;
	float: right;
	margin-top: 8px;
}

.applyIcon:hover {
	cursor: pointer;
	opacity: 1;
}

#lockButton {
	float: none;
}

#addConfigDiv {
	clear: both;
}

/*--- former cluster.jsp styles ---*/
.dataTables_wrapper {
	min-height: 0;
}

/*--- former keys.jsp styles ---*/
input.wide[type=text] {
	width: 90%;
}

button {
	float: none;
}

#result {
	margin-top: 15px;
	display: none;
}

.dataTables_wrapper {
	min-height: 0;
}

.dataTables_wrapper table {
	clear: both;
}

/*--- former ldap.jsp styles ---*/
.wide {
	width: 90%;
}

textarea {
	width: 90%;
}

#impexResult {
	display: none;
}

#impexResult,#searchResult {
	display: none;
}

/* --- sidebar overrider --- */
.caps {
	font-variant: normal;
	letter-spacing: 1px;
	text-transform: none;
	font-size: 0.9em;
	line-height: 1%;
	font-weight: bold;
	padding: 0 2px;
}

.inputDisabled {
	background: #EDF0F2 !important;	
}

#sidebar hr {
	margin: 12px 0;
}

.sidebar-headline {
	padding: 3px 3px 1px 3px;
	margin: 2px 0 3px 0;
	-moz-box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.1);
	-webkit-box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.1);
	box-shadow: inset 2px 2px 2px rgba(0, 0, 0, 0.1);
	-moz-border-radius: 3px;
	-webkit-border-radius: 3px;
	border-radius: 3px;	
}

.sidebar-headline-warning { background-color: #fcc; color: #663333; }
.sidebar-headline-note { background-color: #FFFFCE; color: #666635; }
.sidebar-headline-tip { background-color: #dfd; color: #375937; }
.sidebar-headline-info { background-color: #c0d0e3; color: #27374a; }

.sidebar-headline-content {
	margin-bottom: 1px;
	padding: 0 2px 0 2px;
}

.break-word {
	word-wrap: break-word;
}

.truncate {
	overflow: hidden;
	white-space: nowrap;
	text-overflow: ellipsis;
}

#sidebar,
#sidebar1,
#sidebar2,
#sidebar3,
#sidebar4 {
    display: none !important;
}
.colborder {
	border-right:none;
	box-sizing: border-box;
	margin-right: 0;
}

